@startuml
title Objets Connectés

'''classes
class Telecommande{
    + Telecommande():
    + ajouterAppareil(Appareil):
    + activerAppareil(int):
    + desactiverAppareil(int):
    + activerTout():
    + toString(): String
}

class Lampe{
    - nom : String
    - allume : boolean
    + Lampe(String):
    + allumer():
    + eteindre():
    + toString(): String
}

class Hifi{
    - son : int
    + allumer():
    + eteindre():
    + toString():String
}

class Cheminee{
    -intensite : int
    +Cheminee():
    +changerIntensite(int i):
    +getLumiere():int
    +toString():String
}

class AdapterCheminee{
    +AdapterCheminee(Cheminee):
    +eteindre():
    +allumer():
    +toString():String
}
'''Adapter : c'est un patron de conception qui permet à des objets incompatibles de collaborer.
'''La classe Adapter emballe les appels à un objet et les mets dans un format reconnaissable par le second objet.

class AdapterThermostat{
    +AdapterThermostat(Thermostat):
    +eteindre():
    +allumer():
    +toString():
}

class Thermostat{
    -temperature:int
    +Thermostat():
    +point(Graphics g):
    +monterTemperature():
    +baisserTemperature():
}

class Appareil{
    +eteindre():
    +allumer():

}

'''relations
Appareil <|.. Lampe
Appareil <|.. Hifi
Appareil <|.. AdapterCheminee
Appareil <|.. AdapterThermostat
Telecommande "1" -> "0..*" Appareil : - appareils
AdapterCheminee "1" -> "1" Cheminee : cheminee
AdapterThermostat "1" -> "1" Thermostat : thermostat
@enduml